--- a/Exercicios/ex023/fundo006.html
+++ b/Exercicios/ex023/fundo006.html
@@ -4,20 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela
+    </title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover ;
+            background-attachment: fixed;*/
+
+            /*shorthand - backgroud
+            color > image > position > repeat > [size] a> attachment
+            */
+            background: black url('imagens/wallpaper002.jpg') center top no-repeat fixed;
+            background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 700px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -29,6 +37,11 @@
     <main>
         <h1>Teste de imagem de fundo
         </h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae maxime quaerat debitis aliquid repellat animi dolorem delectus voluptatem sequi cupiditate. Reiciendis libero obcaecati, vel odit dignissimos ducimus qui quaerat Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus mollitia blanditiis esse soluta aperiam perferendis, tenetur corporis ullam dolor quo neque vitae. Autem tenetur, quo maxime dolores voluptatum sequi temporibus?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae maxime quaerat debitis aliquid repellat animi dolorem delectus voluptatem sequi cupiditate. Reiciendis libero obcaecati, vel odit dignissimos ducimus qui quaerat Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus mollitia blanditiis esse soluta aperiam perferendis, tenetur corporis ullam dolor quo neque vitae. Autem tenetur, quo maxime dolores voluptatum sequi temporibus?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae maxime quaerat debitis aliquid repellat animi dolorem delectus voluptatem sequi cupiditate. Reiciendis libero obcaecati, vel odit dignissimos ducimus qui quaerat Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus mollitia blanditiis esse soluta aperiam perferendis, tenetur corporis ullam dolor quo neque vitae. Autem tenetur, quo maxime dolores voluptatum sequi temporibus?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae maxime quaerat debitis aliquid repellat animi dolorem delectus voluptatem sequi cupiditate. Reiciendis libero obcaecati, vel odit dignissimos ducimus qui quaerat Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus mollitia blanditiis esse soluta aperiam perferendis, tenetur corporis ullam dolor quo neque vitae. Autem tenetur, quo maxime dolores voluptatum sequi temporibus?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae maxime quaerat debitis aliquid repellat animi dolorem delectus voluptatem sequi cupiditate. Reiciendis libero obcaecati, vel odit dignissimos ducimus qui quaerat Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus mollitia blanditiis esse soluta aperiam perferendis, tenetur corporis ullam dolor quo neque vitae. Autem tenetur, quo maxime dolores voluptatum sequi temporibus?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae maxime quaerat debitis aliquid repellat animi dolorem delectus voluptatem sequi cupiditate. Reiciendis libero obcaecati, vel odit dignissimos ducimus qui quaerat Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus mollitia blanditiis esse soluta aperiam perferendis, tenetur corporis ullam dolor quo neque vitae. Autem tenetur, quo maxime dolores voluptatum sequi temporibus?</p>
     </main>
 </body>
